# jcaroblog

./: .gitignore  README.md  pelicanconf.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
content/: creating_a_blog.ipynb  dev_containers.ipynb  first_notebook.ipynb  fluent_api.ipynb  poetry.md  sql-llm-spark.ipynb
jcaroblog-dev-venv/: pyvenv.cfg
output/: archives.html  authors.html  categories.html  creating-a-markdown-blog-using-ipynb-and-pelican.html  development-containers-in-vscode-and-github-codespaces.html  index.html  my-first-review.html  tags.html  testing-testing.html  the-virtues-of-a-programming-your-etl-pipeline-using-a-fluent-api.html
output/author/: jesus-caro.html
output/category/: python.html  review.html
output/tag/: blog.html  codespaces.html  development-containers.html  docker.html  github-pages.html  github.html  markdown.html  pelican.html  pip.html  poetry.html  python.html  venv.html  vscode.html
output/theme/css/: poole.css
pelican-hyde/output/: search.toml
pelican-hyde/output/feeds/: all.atom.xml
pelican-hyde/static/css/: hyde.css
