[tool.poetry]
name = "jcaroblog"
version = "0.1.0"
description = ""
authors = ["\"jesus caro\""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "23.1.0"
bleach = "6.0.0"
blinker = "1.6.2"
defusedxml = "0.7.1"
docutils = "0.20.1"
jinja2 = "3.0.0"
entrypoints = "0.4"
fastjsonschema = "2.17.1"
feedgenerator = "2.1.0"
ipython-genutils = "0.2.0"
jsonschema = "4.17.3"
jupyter-core = "5.3.0"
markdown = "3.4.3"
markdown-it-py = "2.2.0"
markupsafe = "2.1.3"
mdurl = "0.1.2"
mistune = "0.8.4"
nbconvert = "5.6.1"
nbformat = "5.9.0"
pandocfilters = "1.5.0"
pelican = "4.8.0"
pelican-jupyter = "0.10.1"
platformdirs = "3.5.1"
pygments = "2.15.1"
pyrsistent = "0.19.3"
python-dateutil = "2.8.2"
pytz = "2023.3"
rich = "13.4.1"
six = "1.16.0"
testpath = "0.6.0"
traitlets = "5.9.0"
unidecode = "1.3.6"
webencodings = "0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
